[gd_scene load_steps=8 format=2]

[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://PicUpload.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="PicUpload" type="Popup"]
visible = true
anchor_right = 0.75
anchor_bottom = 0.75
margin_right = -6.10352e-05
margin_bottom = -6.10352e-05
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.607843, 1, 1 )

[node name="MainCT" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="TitleCT" type="HBoxContainer" parent="MainCT"]
margin_right = 1260.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Title" type="Label" parent="MainCT/TitleCT"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Picture Upload"
align = 1
valign = 1
autowrap = true

[node name="Message" type="Label" parent="MainCT/TitleCT"]
margin_left = 204.0
margin_right = 1260.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Please copy and paste the URL of the picture you want to add."
valign = 1

[node name="PicCT" type="HBoxContainer" parent="MainCT"]
margin_top = 104.0
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Picture" type="TextureRect" parent="MainCT/PicCT"]
margin_right = 416.0
margin_bottom = 596.0
rect_min_size = Vector2( 416, 0 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="MainCT/PicCT"]
margin_left = 420.0
margin_right = 445.0
margin_bottom = 596.0
rect_min_size = Vector2( 25, 0 )

[node name="TextCT" type="VBoxContainer" parent="MainCT/PicCT"]
margin_left = 449.0
margin_right = 1260.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="URLText" type="TextEdit" parent="MainCT/PicCT/TextCT"]
margin_right = 811.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Paste URL here..."
wrap_enabled = true

[node name="HSeparator" type="HSeparator" parent="MainCT/PicCT/TextCT"]
margin_top = 399.0
margin_right = 811.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 5 )

[node name="NameText" type="TextEdit" parent="MainCT/PicCT/TextCT"]
margin_top = 408.0
margin_right = 811.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Name the file here..."
wrap_enabled = true

[node name="HSeparator2" type="HSeparator" parent="MainCT/PicCT/TextCT"]
margin_top = 512.0
margin_right = 811.0
margin_bottom = 517.0
rect_min_size = Vector2( 0, 5 )

[node name="ButtonCT" type="HBoxContainer" parent="MainCT/PicCT/TextCT"]
margin_top = 521.0
margin_right = 811.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3

[node name="Back" type="Button" parent="MainCT/PicCT/TextCT/ButtonCT"]
margin_right = 100.0
margin_bottom = 75.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
text = "Back"

[node name="Refresh" type="Button" parent="MainCT/PicCT/TextCT/ButtonCT"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 75.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
text = "Refresh"

[node name="Add" type="Button" parent="MainCT/PicCT/TextCT/ButtonCT"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 75.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
text = "Add"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MainCT/PicCT/TextCT/ButtonCT/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MainCT/PicCT/TextCT/ButtonCT/Refresh" to="." method="_on_Refresh_pressed"]
